Update sell product, deposit user balance for shopkeeper
