# api/openapi/orders.yml
@@ -74,6 +74,30 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
+  /checkouts/user-orders:
+    get:
+      operationId: getUserOrders
+      parameters:
+        - in: query
+          name: userUuid
+          schema:
+            type: string
+          required: true
+          description: The user uuid.
+      responses:
+        '200':
+          description: todo
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Orders'
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+
   /orders/cancel-order/{orderUUID}:
     put:
       operationId: cancelOrder
